[gd_scene load_steps=19 format=2]

[ext_resource path="res://ui/ship-selection/ShipSelection.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/SovietProgram-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/ship-selection/HBox.gd" type="Script" id=3]
[ext_resource path="res://ui/ship-selection/arrow.png" type="Texture" id=4]
[ext_resource path="res://player/spaceship.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Roboto-Medium.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://player/arrowflip.png" type="Texture" id=7]
[ext_resource path="res://ui/ship-selection/Buttons.gd" type="Script" id=8]
[ext_resource path="res://ui/button.png" type="Texture" id=9]
[ext_resource path="res://ui/button_click.png" type="Texture" id=10]
[ext_resource path="res://ui/button_survol.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "bounce"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 25, 325 ), Vector2( 15, 325 ), Vector2( 25, 325 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=4]
resource_name = "next"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 0.267943, 3.09848e-06, 0.707107, 1 ),
"update": 0,
"values": [ Vector2( 126, 0 ), Vector2( -500, 0 ), Vector2( 700, 0 ), Vector2( 126, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "next_ship"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "prev"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 0.267943, 1.70442e-10, 0.707107, 1 ),
"update": 0,
"values": [ Vector2( 126, 0 ), Vector2( 700, 0 ), Vector2( -500, 0 ), Vector2( 126, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "prev_ship"
} ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 25, 325 ), Vector2( 35, 325 ), Vector2( 25, 325 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 2 )

[node name="ShipSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 50.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 1 )
text = "SELECT YOUR SPACESHIP"
align = 1
valign = 1
autowrap = true

[node name="Select" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 22.0
margin_top = 250.0
margin_right = -21.0
margin_bottom = -20.0

[node name="HBox" type="HBoxContainer" parent="Select"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -9.0
margin_bottom = -110.0
alignment = 1
script = ExtResource( 3 )

[node name="LeftContainer" type="CenterContainer" parent="Select/HBox"]
margin_left = 20.0
margin_right = 120.0
margin_bottom = 700.0
rect_min_size = Vector2( 100, 0 )

[node name="Left" type="TextureButton" parent="Select/HBox/LeftContainer"]
margin_left = 25.0
margin_top = 325.0
margin_right = 75.0
margin_bottom = 375.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )
stretch_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Select/HBox/LeftContainer/Left"]
autoplay = "bounce"
anims/bounce = SubResource( 2 )

[node name="ShipBox" type="CenterContainer" parent="Select/HBox"]
margin_left = 124.0
margin_right = 434.0
margin_bottom = 700.0

[node name="VBoxContainer" type="VBoxContainer" parent="Select/HBox/ShipBox"]
margin_top = 143.0
margin_right = 310.0
margin_bottom = 556.0

[node name="Ship" type="TextureRect" parent="Select/HBox/ShipBox/VBoxContainer"]
margin_right = 310.0
margin_bottom = 310.0
rect_min_size = Vector2( 310, 310 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Select/HBox/ShipBox/VBoxContainer"]
margin_top = 314.0
margin_right = 310.0
margin_bottom = 413.0
custom_fonts/font = SubResource( 3 )
text = "This is the most basic ship of all. Lorem ipsum dolor sit amet lolol."
align = 1
valign = 1
autowrap = true

[node name="Anim" type="AnimationPlayer" parent="Select/HBox/ShipBox"]
anims/next = SubResource( 4 )
anims/prev = SubResource( 5 )

[node name="RightContainer" type="CenterContainer" parent="Select/HBox"]
margin_left = 438.0
margin_right = 538.0
margin_bottom = 700.0
rect_min_size = Vector2( 100, 0 )

[node name="Right" type="TextureButton" parent="Select/HBox/RightContainer"]
margin_left = 25.0
margin_top = 325.0
margin_right = 75.0
margin_bottom = 375.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
stretch_mode = 3

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Select/HBox/RightContainer/Right"]
autoplay = "bounce"
anims/bounce = SubResource( 6 )

[node name="Buttons" type="Control" parent="Select"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -190.0
script = ExtResource( 8 )

[node name="Start" type="TextureButton" parent="Select/Buttons"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -144.5
margin_top = 20.0
margin_right = 144.5
margin_bottom = 92.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )
expand = true

[node name="Label" type="Label" parent="Select/Buttons/Start"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 7 )
text = "START"
align = 1
valign = 1

[node name="Cancel" type="TextureButton" parent="Select/Buttons"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -136.5
margin_top = -90.0
margin_right = 136.5
margin_bottom = -22.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )
expand = true

[node name="Label2" type="Label" parent="Select/Buttons/Cancel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 7 )
text = "CANCEL"
align = 1
valign = 1
[connection signal="pressed" from="Select/HBox/LeftContainer/Left" to="Select/HBox" method="_on_pressed"]
[connection signal="pressed" from="Select/HBox/LeftContainer/Left" to="Select/HBox" method="_on_Left_pressed"]
[connection signal="pressed" from="Select/HBox/RightContainer/Right" to="Select/HBox" method="_on_pressed"]
[connection signal="pressed" from="Select/HBox/RightContainer/Right" to="Select/HBox" method="_on_Right_pressed"]
[connection signal="mouse_entered" from="Select/Buttons/Start" to="Select/Buttons" method="_on_mouse_entered"]
[connection signal="pressed" from="Select/Buttons/Start" to="Select/Buttons" method="_on_pressed"]
[connection signal="pressed" from="Select/Buttons/Start" to="Select/HBox" method="_on_Start_pressed"]
[connection signal="mouse_entered" from="Select/Buttons/Cancel" to="Select/Buttons" method="_on_mouse_entered"]
[connection signal="pressed" from="Select/Buttons/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="Select/Buttons/Cancel" to="Select/Buttons" method="_on_pressed"]
